[package]
name = "rs-broker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[[bin]]
name = "subscribe"
path = "src/subscribe.rs"

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
log = "0.4.29"
env_logger = "0.11.8"

# read config for .env
dotenv = "0.15.0"

rust-broker = "1.1.0"
