[package]
name = "rs-broker-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[[bin]]
name = "subscribe"
path = "src/subscribe.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
log = "0.4.29"
env_logger = "0.11.8"

# read config for .env
dotenv = "0.15.0"
# rust kafka broker
rs-broker = "1.0.1"
