[package]
name = "pulsar-broker"
version = "0.1.1"
edition = "2021"
authors = ["daheige"]
description = "pulsar-broker publish/consumer library"
keywords = ["pulsar", "broker", "pulsar-broker","rs-broker","pub-sub"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/daheige/rs-broker"
documentation = "https://docs.rs/pulsar-broker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }