[package]
name = "redis-broker"
version = "0.1.0"
edition = "2021"
authors = ["daheige"]
description = "redis-broker publish/consumer library"
keywords = ["redis", "broker", "redis-broker","rs-broker","pub-sub"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/daheige/rs-tbox"
documentation = "https://docs.rs/redis-broker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }